logs/azuremonitor.log
Listing '.'...
Listing './bin'...
Compiling './bin/check_azure_ad.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (check_azure_ad.py, line 557)
Compiling './bin/check_azure_compute.py'...
***   File "./bin/check_azure_compute.py", line 66
    except azure.WindowsAzureMissingResourceError, error:
                                                 ^
SyntaxError: invalid syntax

Compiling './bin/check_azure_paas.py'...
***   File "./bin/check_azure_paas.py", line 189
    except azure.WindowsAzureMissingResourceError, error:
                                                 ^
SyntaxError: invalid syntax

Compiling './bin/check_azure_sql.py'...
***   File "./bin/check_azure_sql.py", line 632
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './bin/check_azure_storage.py'...
***   File "./bin/check_azure_storage.py", line 383
    except azure.WindowsAzureMissingResourceError, error:
                                                 ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/azuremonitor'...
Listing './lib/python3.5/site-packages/azuremonitor-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
